k8s-deployment/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: ecommerce
spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    app: mysql-db
