k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ecommerce-app
